<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_layout_padding"
        android:weightSum="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/main_layout_padding"
            android:src="@drawable/logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_child_layout"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/view_drawable_padding"
                    android:src="@drawable/ic_username" />


                <EditText
                    android:id="@+id/edt_email"
                    style="@style/white_edit_Text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_child_layout"
                    android:background="@drawable/square_box_border"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:padding="@dimen/main_layout_padding"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_child_layout"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="@dimen/view_drawable_padding"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/edt_password"
                    style="@style/white_edit_Text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/square_box_border"
                    android:cursorVisible="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    android:padding="@dimen/main_layout_padding"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>


            <TextView
                android:id="@+id/txt_sign_in"
                style="@style/rounded_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_child_layout"
                android:layout_marginTop="@dimen/margin_child_layout"
                android:background="@drawable/rounded_shape_border"
                android:gravity="center"
                android:paddingLeft="@dimen/rounded_button_padding_left"
                android:paddingTop="@dimen/main_layout_padding"
                android:paddingRight="@dimen/rounded_button_padding_left"
                android:paddingBottom="@dimen/main_layout_padding"
                android:text="@string/login"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/txt_forgot_password"
                style="@style/my_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_child_layout"
                android:padding="@dimen/main_layout_padding"
                android:visibility="gone"
                android:text="@string/text_forgot_password"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_new_user"
            style="@style/my_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:padding="@dimen/main_layout_padding"
            android:text="@string/text_new_user_login"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

</LinearLayout>