<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle_alertLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large" />

        <ScrollView
            android:id="@+id/sv_alert_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/ll_button"
            android:layout_below="@+id/txtTitle_alertLogout"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_alert_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sf_scale_8dp"
                android:layout_marginTop="@dimen/sf_scale_8dp"
                android:layout_marginRight="@dimen/sf_scale_8dp"
                android:gravity="center_horizontal"
                android:textColor="#111"
                android:paddingBottom="@dimen/sf_scale_6dp"
                android:textSize="@dimen/text_size_medium" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_no_alert_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:text="@string/button_no"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_yes_alert_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:text="@string/button_yes"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>